# super-waddle

./: .breakpoints  .procfile  .replit  Main.js  Overview.md  README.md  TalkHere.md  connect_database.py  db.sqlite3  db.sqlite3-journal  manage.py  pyproject.toml  requirements.txt  test_word_doc.docx
.github/workflows/: deploy.yml  (+2 more)
.well-known/: did-configuration.json  microsoft-identity-association.json
Links/: admin.py  models.py
Uploads/: admin.py  apps.py  forms.py  models.py  views.py
a1homepage/: admin.py  apps.py  models.py
accountss/: admin.py  forms.py  views.py
accountsss/: admin.py  apps.py
apps/: admin.py  models.py
aprovedapps/: admin.py  apps.py  models.py  urls.py
bllog/: admin.py  apps.py  models.py
blog/: views.py
homepage/: admin.py  models.py
munchyblog/: admin.py  apps.py  models.py
mysite/: asgi.py  discussions.js  serializers.py  settings.py  urls.py  views.py
personall/: apps.py
polls/: admin.py
progress/: admin.py  apps.py  forms.py  links.py  models.py  urls.py  views.py
templates/: .htaccess  404errorPage.html  500errorPage.html  Home.html  NFTCreator.html  bank.html  blog_post.html  dev-tools.html  errorPage404.html  firstview.html  home_blog.html  homepage.html  logedin.html  logon2.html  logon3.html  munchyAnswersIcon.html  munchy_apps.html  navigation.html  polling.html  publish.htm  rewards3.html  rickroll.html  rickroll2.html  rickroll3.html  specific-header.html  users.html  versions.html
templatess/: navigation.html
testing/: admin.py  models.py  views.py
uploader/: admin.py  forms.py  models.py  views.py
(+203 files in other folders)
