[tool.poetry]
name = "munchysite"
version = "1.0.1"
description = "munchy site code and all dependices"
authors = ["cs947939, coding235429878"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.0.0"
django-allauth = "^0.49.0"
jwt = "^1.3.1"
mock = "^4.0.3"
djangoblogs = "^0.2.0"
sudo = "^1.0.0"
sudoaptinstall = "^0.3"
apt-local = "^0.0.2-beta.1"
certbot = "^1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
